# ADK-Agent-for-Buyer-s-Remorse

./: README.md
csds-resolutions-bot-3/: README.md  pyproject.toml
csds-resolutions-bot-3/construct_kb/: __init__.py  main.py
csds-resolutions-bot-3/construct_kb/data/: llm_full_knowledge_base.json
csds-resolutions-bot-3/construct_kb/utils/: upload_to_gcs.py  vertexai_rag_utils.py
csds-resolutions-bot-3/resolutions_agent/: __init__.py
csds-resolutions-bot-3/resolutions_agent/orchestrator/: __init__.py  agent.py
csds-resolutions-bot-3/resolutions_agent/order_resolution/: __init__.py  agent.py  callbacks.py  instructions.md
csds-resolutions-bot-3/resolutions_agent/resolutions_agent/: __init__.py  agent.py  callbacks.py  instructions.md
csds-resolutions-bot-3/resolutions_agent/tools/: __init__.py  tools.py
csds-resolutions-bot-3/resolutions_agent/utils/: __init__.py
csds-resolutions-bot-3/tests/: __init__.py  test_main.py
csds-resolutions-bot-3/utils/: __init__.py
